--- a/CheckPassword/CheckPassword.ui
+++ b/CheckPassword/CheckPassword.ui
@@ -6,80 +6,51 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>384</width>
+    <width>272</width>
     <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Frame</string>
   </property>
-  <widget class="QPushButton" name="pushButton">
+  <widget class="QLabel" name="label_showPass">
    <property name="geometry">
     <rect>
-     <x>14</x>
-     <y>8</y>
-     <width>97</width>
-     <height>85</height>
+     <x>0</x>
+     <y>14</y>
+     <width>272</width>
+     <height>73</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);
-border-style:solid;
-border-width:2px;
-border-color: rgb(52, 101, 164);
-border-radius:7px;
-font: 75 bold 32pt &quot;Arial&quot;;
-color: rgb(52, 101, 164);
+    <string notr="true">font: 75 75px &quot;Ubuntu&quot;;
+color: rgb(32, 74, 135);
 </string>
    </property>
    <property name="text">
-    <string>9</string>
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_2">
+  <widget class="QFrame" name="frame_ShowKeyBoard">
    <property name="geometry">
     <rect>
-     <x>136</x>
-     <y>8</y>
-     <width>97</width>
-     <height>85</height>
+     <x>0</x>
+     <y>92</y>
+     <width>272</width>
+     <height>387</height>
     </rect>
    </property>
    <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);
-border-style:solid;
-border-width:2px;
-border-color: rgb(52, 101, 164);
-border-radius:7px;
-font: 75 bold 32pt &quot;Arial&quot;;
-color: rgb(52, 101, 164);
-</string>
+    <string notr="true">background-color: rgba(0, 15, 177, 0);</string>
    </property>
-   <property name="text">
-    <string>9</string>
+   <property name="frameShape">
+    <enum>QFrame::StyledPanel</enum>
    </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton_3">
-   <property name="geometry">
-    <rect>
-     <x>260</x>
-     <y>10</y>
-     <width>97</width>
-     <height>85</height>
-    </rect>
-   </property>
-   <property name="styleSheet">
-    <string notr="true">background-color: rgb(255, 255, 255);
-border-style:solid;
-border-width:2px;
-border-color: rgb(52, 101, 164);
-border-radius:7px;
-font: 75 bold 32pt &quot;Arial&quot;;
-color: rgb(52, 101, 164);
-</string>
-   </property>
-   <property name="text">
-    <string>9</string>
+   <property name="frameShadow">
+    <enum>QFrame::Raised</enum>
    </property>
   </widget>
  </widget>
